--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
       <article>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
-          web services to look attractive but have almost zero
-          skills in graphic design, just like
-          <a href="https://github.com/yegor256">myself</a>.
-          This is how your website will look if you add just this code to your HTML:
+          website to look attractive but have almost zero
+          skills in web design, just like
+          <a href="https://github.com/yegor256">me</a>.
+          This is how your website will look if you just add this code to your HTML:
         </p>
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
-  &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-0.8.1.min.css"/&gt;
+  &lt;head lang="en"&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-VERSION.min.css"/&gt;
   &lt;/head&gt;
+  &lt;body&gt;
+    &lt;!-- Webpage content goes here --&gt;
+  &lt;/body&gt;
 &lt;/html&gt;</pre>
         <p>
           You should <strong>not</strong> use any CSS classes to make your HTML code look nice. Just
@@ -48,7 +52,7 @@
           <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fyegor256.github.io%2Ftacit%2F&amp;profile=css3">CSS</a>.
         </p>
         <h2>Forms</h2>
-        <form method="get" action="#">
+        <form action="#">
           <fieldset>
             <legend>Here is a simple form:</legend>
             <label for="email">Your email:</label>
@@ -59,11 +63,13 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
-            <label for="sex">Your age:</label>
-            <input type="radio" id="under" name="age"/> <span>I'm under 18</span>
-            <input type="radio" id="over" name="age"/> <span>I'm over 18</span>
-            <label for="sex">Your favorite food:</label>
-            <select multiple="multiple" name="food">
+            <label>Your age:</label>
+            <label for="under">I'm under 18</label>
+            <input type="radio" id="under" name="age">
+            <label for="over">I'm over 18</label>
+            <input type="radio" id="over" name="age">
+            <label for="food">Your favorite food:</label>
+            <select multiple="multiple" name="food" id="food">
               <optgroup label="Italian">
                 <option value="1">Pizza</option>
                 <option value="2">Spaghetti</option>
@@ -76,7 +82,7 @@
             </select>
             <label for="address">Your full address:</label>
             <textarea name="address" id="address" placeholder="PO box is not allowed"></textarea>
-            <input type="checkbox" name="consent" id="consent" value="test"/>
+            <input type="checkbox" name="consent" id="consent" value="test">
             <label for="consent">I agree with all possible terms and conditions</label>
             <button type="submit">Subscribe</button>
             <button type="reset">Reset</button>
