#74 update index footer date

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <nav>
           <ul>
             <li>
-              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small>
+              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015 - 2017</small>
             </li>
           </ul>
         </nav>
