#31 browser compatibility table

--- a/index.html
+++ b/index.html
@@ -171,6 +171,61 @@
           fork it and submit a <a href="https://github.com/yegor256/tacit">pull request</a>.
           Your help is always appreciated.
         </p>
+        <h2>Compatibility</h2>
+        <p>
+          The following list is of tested browsers for compatibility.
+          We don't have any guarantees of compatibility for other browsers,
+          but as soon as possible will verify and add more to the list.
+          Some of these browsers present minor issues that are reported in the
+          our <a href="https://github.com/yegor256/tacit">issues</a> list.
+        </p>
+        <table>
+          <tr>
+            <th>Browser/OS</th>
+            <th>Version</th>
+            <th>Compatible</th>
+          </tr>
+          <tr>
+            <td>Chrome</td>
+            <td> &gt;= 60 </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Firefox</td>
+            <td> &gt;= 56 </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Safari</td>
+            <td> &gt;= 11 </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Opera</td>
+            <td> &gt;= 48 </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Edge</td>
+            <td> &gt;= 14 </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Chrome (iOS)</td>
+            <td> &gt;= 60 </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Safari (iOS)</td>
+            <td> - </td>
+            <td>Yes</td>
+          </tr>
+          <tr>
+            <td>Internet Explorer</td>
+            <td> &gt;= 11 </td>
+            <td>Yes</td>
+          </tr>
+        </table>
       </article>
       <footer>
         <nav>
