--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.1.0</code></li>
+            <li><code>1.1.1</code></li>
           </ul>
         </nav>
       </header>
@@ -29,7 +29,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-1.1.0.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-1.1.1.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -176,14 +176,14 @@
         <nav>
           <ul>
             <li>
-              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015</small>
+              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015 - 2017</small>
             </li>
           </ul>
         </nav>
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.1.0.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.1.1.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
@@ -192,6 +192,13 @@
             <li>
               <a href="https://github.com/yegor256/tacit/stargazers">
                 <img src="https://img.shields.io/github/stars/yegor256/tacit.svg?style=flat-square" alt="github stars"/>
+              </a>
+            </li>
+            <li>
+              <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="Valid CSS!" />
               </a>
             </li>
           </ul>
