--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -59,9 +59,9 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
-            <label for="sex">Your age:</label>
-            <input type="radio" id="under" name="age"/> <span>I'm under 18</span>
-            <input type="radio" id="over" name="age"/> <span>I'm over 18</span>
+            Your age:
+            <input type="radio" id="under" name="age" value="under"/> <label for="under"> I'm under 18</label>
+            <input type="radio" id="over" name="age" value="over"/> <label for="over"> I'm over 18</label>
             <label for="sex">Your favorite food:</label>
             <select multiple="multiple" name="food">
               <optgroup label="Italian">
