sub and sub elements style added in typography scss file

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <p>I would recommend to avoid this type of heading at all.</p>
         <h6>This is &lt;h6&gt;</h6>
         <p>I would recommend to avoid this type of heading at all.</p>
+        <p>Sup<sup>&reg;</sup> and Sub<sub>&reg;</sub> Elements</p>
         <h2>Lists</h2>
         <p>Just use standard <code>&lt;ul&gt;</code>, <code>&lt;ol&gt;</code> and <code>&lt;dl&gt;</code> tags:
         <ul>
