--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             Your age:
             <label><input type="radio" id="under" name="age" value="under"/> I'm under 18</label>
             <label><input type="radio" id="over" name="age" value="over"/> I'm over 18</label>
-            <label for="sex">Your favorite food:</label>
-            <select multiple="multiple" name="food">
+            <label for="food">Your favorite food:</label>
+            <select multiple="multiple" name="food" id="food">
               <optgroup label="Italian">
                 <option value="1">Pizza</option>
                 <option value="2">Spaghetti</option>
@@ -161,7 +161,7 @@
         <p>Sometimes you want to let people know they should press a keyboard command like <kbd>ctrl + l</kbd>.</p>
         <h2>Images</h2>
         <figure>
-          <img src="http://placehold.it/900x500" />
+          <img src="http://placehold.it/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
           <figcaption>A photo placeholder text</figcaption>
         </figure>
         <h2>Work in progress</h2>
