#124 - add Tacit logo to shortcut icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="CSS Framework for Dummies"/>
     <link rel="stylesheet" href="tacit.min.css"/>
     <title>tacit</title>
-    <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
+    <link rel="shortcut icon" href="images/tacit_logo.png"/>
   </head>
   <body>
     <section>
