#125 - add tacit logo to top of index page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </nav>
       </header>
       <article>
+        <figure>
+          <img src="images/tacit_logo.svg" alt="tacit log" style="height: 100px;"/>
+        </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
           web services to look attractive but have almost zero
