--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <meta name="description" content="CSS Framework for Dummies"/>
     <link rel="stylesheet" href="tacit.min.css"/>
     <title>tacit</title>
-    <link rel="shortcut icon" type="image/gif" href="logo.gif"/>
+    <link rel="shortcut icon" href="images/tacit_logo.png"/>
   </head>
   <body>
     <section>
       <header>
         <nav>
           <ul>
-            <li><code>1.2.0</code></li>
+            <li><code>1.2.1</code></li>
           </ul>
         </nav>
       </header>
       <article>
+        <figure>
+          <img src="images/tacit_logo.svg" alt="tacit log" style="height: 100px;"/>
+        </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
           web services to look attractive but have almost zero
@@ -29,7 +32,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.0.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.1.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -183,7 +186,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.0.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.1.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
