#128 - fix logo and icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="CSS Framework for Dummies"/>
     <link rel="stylesheet" href="tacit.min.css"/>
     <title>tacit</title>
-    <link rel="shortcut icon" href="images/tacit_logo.png"/>
+    <link rel="icon" type="image/png" href="/tacit_logo.png"/>
   </head>
   <body>
     <section>
@@ -20,7 +20,7 @@
       </header>
       <article>
         <figure>
-          <img src="images/tacit_logo.svg" alt="tacit log" style="height: 100px;"/>
+          <img src="/tacit_logo.svg" alt="tacit log" style="height: 100px;"/>
         </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
