--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </header>
       <article>
         <figure>
-          <img src="./tacit_logo.svg" alt="tacit log" style="height: 100px;"/>
+          <img src="./tacit_logo.svg" alt="tacit logo" style="height: 100px;"/>
         </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
