--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="description" content="CSS Framework for Dummies"/>
     <link rel="stylesheet" href="tacit.min.css"/>
     <title>tacit</title>
-    <link rel="icon" type="image/png" href="/tacit_logo.png"/>
+    <link rel="icon" type="image/png" href="./tacit_logo.png"/>
   </head>
   <body>
     <section>
       <header>
         <nav>
           <ul>
-            <li><code>1.2.2</code></li>
+            <li><code>1.2.3</code></li>
           </ul>
         </nav>
       </header>
       <article>
         <figure>
-          <img src="/tacit_logo.svg" alt="tacit log" style="height: 100px;"/>
+          <img src="./tacit_logo.svg" alt="tacit logo" style="height: 100px;"/>
         </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
@@ -32,7 +32,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.2.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.3.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -186,7 +186,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.2.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.3.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
