--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.2.6</code></li>
+            <li><code>1.2.7</code></li>
           </ul>
         </nav>
       </header>
@@ -32,7 +32,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.6.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.7.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -53,7 +53,7 @@
         <h2>Forms</h2>
         <form method="get" action="#">
           <fieldset>
-            <legend>Here is a simple form:</legend>
+            <legend>Here is a simple form with <code>&lt;fieldset&gt;</code>:</legend>
             <label for="email">Your email:</label>
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
             <label for="sex">Your gender:</label>
@@ -84,6 +84,10 @@
             <button type="reset">Reset</button>
             <button disabled>Can't click</button>
           </fieldset>
+        </form>
+        <p>This is a one-line form without <code>&lt;fieldset&gt;</code>:</p>
+        <form>
+          <label>Add funds:</label><input type="text" size="10" placeholder="e.g. $10"/><button type="submit">Pay</button>
         </form>
         <h2>Tables</h2>
         <p>
@@ -186,7 +190,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.6.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.7.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
