--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.2.8</code></li>
+            <li><code>1.2.9</code></li>
           </ul>
         </nav>
       </header>
       <article>
         <figure>
-          <img src="./tacit_logo.svg" alt="tacit logo" style="height: 100px;"/>
+          <img src="./tacit_logo.svg" alt="tacit logo" style="max-height: 100px;"/>
         </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
@@ -32,7 +32,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.8.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.2.9.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -190,7 +190,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.8.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-1.2.9.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
