#162 add demo nav menu to index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <li><code>VERSION</code></li>
           </ul>
         </nav>
+        <nav>
+          <ul>
+            <li><a href=".">home</a></li>
+            <li><a href=".">about</a></li>
+            <li><a href=".">projects</a></li>
+            <li><a href=".">talks</a></li>
+          </ul>
+        </nav>
       </header>
       <article>
         <figure>
