#147 - tacit logo doesn't load on android 2.3.3

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </header>
       <article>
         <figure>
-          <img src="./tacit_logo.svg" alt="tacit logo" style="max-height: 100px;"/>
+          <img src="./tacit_logo.png" alt="tacit logo" style="max-height: 100px;"/>
         </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
