--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.3.4</code></li>
+            <li><code>1.3.5</code></li>
           </ul>
         </nav>
         <nav>
@@ -28,7 +28,7 @@
       </header>
       <article>
         <figure>
-          <img src="./tacit_logo.svg" alt="tacit logo" style="max-height: 100px;"/>
+          <img src="./tacit_logo.png" alt="tacit logo" style="max-height: 100px;"/>
         </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
@@ -40,7 +40,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.3.4.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.3.5.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -198,7 +198,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.3.4.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.3.5.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
