--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-VERSION.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-VERSION.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -70,7 +70,7 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
-            <label for="age">Your age:</label>            
+            <label for="age">Your age:</label>
             <label><input type="radio" id="under" name="age" value="under"/> I'm under 18</label>
             <label><input type="radio" id="over" name="age" value="over"/> I'm over 18</label>
             <label for="food">Your favorite food:</label>
