--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.3.8</code></li>
+            <li><code>1.3.9</code></li>
           </ul>
         </nav>
         <nav>
@@ -40,7 +40,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.rawgit.com/yegor256/tacit/gh-pages/tacit-css-1.3.8.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.3.9.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -70,7 +70,7 @@
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
-            Your age:
+            <label for="age">Your age:</label>
             <label><input type="radio" id="under" name="age" value="under"/> I'm under 18</label>
             <label><input type="radio" id="over" name="age" value="over"/> I'm over 18</label>
             <label for="food">Your favorite food:</label>
@@ -198,7 +198,7 @@
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.3.8.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.3.9.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
