--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
           Use this to emphasize a quote
           <footer>&mdash; Author Name, Publication</footer>
         </blockquote>
+        <h2>Aside</h2>
+        <aside>
+          Use this to emphasize a content related to the main content.
+        </aside>
+        <p>main content</p>
         <h2>Keyboard</h2>
         <p>Sometimes you want to let people know they should press a keyboard command like <kbd>ctrl + l</kbd>.</p>
         <h2>Images</h2>
