--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="css, html5, css framework"/>
-    <meta name="description" content="CSS Framework for Dummies"/>
+    <meta name="description" content="CSS Framework for Dummies, (c) Yegor Bugayenko 2015-2020"/>
     <link rel="stylesheet" href="tacit.min.css"/>
     <title>tacit</title>
     <link rel="icon" type="image/png" href="./tacit_logo.png"/>
@@ -196,7 +196,7 @@
         <nav>
           <ul>
             <li>
-              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015-2019</small>
+              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015-2020</small>
             </li>
           </ul>
         </nav>
