fix: replace img url in images example
Fix `GET https://placehold.it/900x500 net::ERR_CERT_DATE_INVALID`

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <p>Sometimes you want to let people know they should press a keyboard command like <kbd>ctrl + l</kbd>.</p>
         <h2>Images</h2>
         <figure>
-          <img src="http://placehold.it/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
+          <img src="https://via.placeholder.com/900x500" alt="placeholder image 900 pixels wide by 500 pixels tall"/>
           <figcaption>A photo placeholder text</figcaption>
         </figure>
         <h2>Work in progress</h2>
