#235 made by fixed

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <nav>
           <ul>
             <li>
-              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015-2021</small>
+              <small>Made by <a href="https://www.yegor256.com">@yegor256</a>, 2015-2023</small>
             </li>
           </ul>
         </nav>
