--- a/index.html
+++ b/index.html
@@ -191,6 +191,13 @@
           <dt>Cherry</dt>
           <dd>A red fruit that is hard to peel.</dd>
         </dl>
+       
+       <details>
+        <summary>Who was Audubon?</summary>
+        John James Audubon was a French-American self-trained artist, naturalist, and ornithologist. 
+        His combined interests in art and ornithology turned into a plan to make a complete pictorial record of all the bird species of North America.
+       </details>  
+       
         <h2>Blockquote</h2>
         <blockquote>
           Use this to emphasize a quote
