--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2023 Yegor Bugayenko
+ * Copyright (c) 2015-2024 Yegor Bugayenko
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -37,7 +37,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>1.6.0</code></li>
+            <li><code>1.7.0</code></li>
           </ul>
         </nav>
         <nav>
@@ -63,7 +63,7 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.6.0.min.css"/&gt;
+    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.7.0.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
@@ -191,6 +191,13 @@
           <dt>Cherry</dt>
           <dd>A red fruit that is hard to peel.</dd>
         </dl>
+       
+       <details>
+        <summary>Who was Audubon?</summary>
+        John James Audubon was a French-American self-trained artist, naturalist, and ornithologist. 
+        His combined interests in art and ornithology turned into a plan to make a complete pictorial record of all the bird species of North America.
+       </details>  
+       
         <h2>Blockquote</h2>
         <blockquote>
           Use this to emphasize a quote
@@ -219,14 +226,14 @@
         <nav>
           <ul>
             <li>
-              <small>Made by <a href="http://www.yegor256.com">Yegor Bugayenko</a>, 2015-2021</small>
+              <small>Made by <a href="https://www.yegor256.com">@yegor256</a>, 2015-2024</small>
             </li>
           </ul>
         </nav>
         <nav>
           <ul>
             <li><small><a href="https://github.com/yegor256/tacit">GitHub</a></small></li>
-            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.6.0.min.css">Download</a></small></li>
+            <li><small><a href="https://yegor256.github.io/tacit/tacit-css-1.7.0.min.css">Download</a></small></li>
             <li><small><a href="https://opensource.org/licenses/MIT">MIT license</a></small></li>
           </ul>
         </nav>
