--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <input name="email" type="text" id="email" size="25" placeholder="must be unique"/>
             <label for="sex">Your gender:</label>
             <select name="sex" id="sex">
-              <option value="none">don't want to say</option>
+              <option value="none">-</option>
               <option value="female">female</option>
               <option value="male">male</option>
             </select>
