--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <nav>
           <ul>
-            <li><code>VERSION</code></li>
+            <li><img src="./tacit_logo.png" alt="tacit logo" style="max-height: 100px;"/></li>
           </ul>
         </nav>
         <nav>
@@ -31,9 +31,6 @@
         </nav>
       </header>
       <article>
-        <figure>
-          <img src="./tacit_logo.png" alt="tacit logo" style="max-height: 100px;"/>
-        </figure>
         <p>
           <strong>Tacit</strong> is a CSS framework for <em>dummies</em>, who want their
           web services to look attractive but have almost zero
@@ -232,6 +229,11 @@
                 alt="Valid CSS!" />
               </a>
             </li>
+          </ul>
+        </nav>
+        <nav>
+          <ul>
+            <li>VERSION</li>
           </ul>
         </nav>
       </footer>
