--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <pre>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
   &lt;head&gt;
-    &lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-VERSION.min.css"/&gt;
+    &lt;link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-VERSION.min.css"/&gt;
   &lt;/head&gt;
 &lt;/html&gt;</pre>
         <p>
